Fixed Post Overlap

--- a/client/src/ProfilePage/profile.css
+++ b/client/src/ProfilePage/profile.css
@@ -81,13 +81,13 @@ body{
 }
 
 .profilepostcontainer{
-    padding: 1rem;
-    height: 60vh;
+    margin: 1rem;
+    height: 600px;
 }
 
 .profiledisplaypost{
-    max-width: 500px;
-    max-height: 550px;
+    max-width: 400px;
+    max-height: 425px;
     border: 2px solid #1A3E2F;
     border-radius: 20px;
 }
@@ -114,7 +114,7 @@ body{
     background-color: #EFF2E4;
     justify-content: space-between;
     width: 90%;
-    min-height: 70%;
+    max-height: 600px;
     border: 2px solid #1A3E2F;
     border-radius: 20px;
 }
